--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,12 +387,12 @@
     "p_c = 5/6\n",
     "p_i = 1/6\n",
     "\n",
-    "p_cov = (p_coc_c * p_c) + (p_cov_i * p_i)"
+    "p_cov = (p_cov_c * p_c) + (p_cov_i * p_i)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [
     {
